<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.MatchActivity">
    <FrameLayout
        android:layout_width="match_parent"
        android:id="@+id/frameLayout"
        android:layout_height="match_parent">

        <com.otaliastudios.cameraview.CameraView
            android:id="@+id/cameraView"
            android:keepScreenOn="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
        <firekitkat.com.firekitkat.views.custom.FaceMapView
            android:id="@+id/ivProcessedImage"
            android:layout_width="match_parent"
            android:background="#22000000"

            android:layout_height="match_parent"
            />
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/ivMACameraShot"
                    android:layout_width="150dp"
                    android:layout_margin="6dp"
                    android:layout_height="180dp" />
                <ImageView
                    android:layout_width="150dp"
                    android:id="@+id/ivMAArtist"
                    android:layout_margin="6dp"
                    android:layout_height="180dp" />
            </LinearLayout>
            <Button
                android:id="@+id/btnPlayMusicVideo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_toStartOf="@id/btnPost"
                android:layout_centerInParent="true"
                android:onClick="btnPlayVideoOnClick"
                android:text="@string/str_play_video"/>
            <Button
                android:id="@+id/btnPost"
                android:layout_width="wrap_content"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:onClick="btnPostClick"
                android:text="@string/str_post_result"/>
            <Button
                android:id="@+id/btnTryAgain"
                android:layout_width="wrap_content"
                android:layout_toEndOf="@id/btnPost"
                android:visibility="gone"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:onClick="btnTryAgainOnClick"
                 android:text="@string/str_btn_try_again"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginBottom="20sp"
                android:layout_alignParentBottom="true"
                android:textSize="24sp"
                android:id="@+id/tvWaitFaceRecognition"
                android:text="@string/wait_for_the_fire_magic"/>

        </RelativeLayout>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>