<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="6dp"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        android:layout_gravity="center"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

      <RelativeLayout
          android:layout_width="match_parent"

          android:layout_margin="6sp"
          android:layout_height="wrap_content">
          <TextView
              android:id="@+id/tvCardMatchTitle"
              android:textStyle="bold"
              android:layout_marginBottom="6sp"
              android:textSize="16sp"
              android:text="@string/str_tvmatchtitle"
              android:layout_width="match_parent"
              android:layout_height="wrap_content" />

          <ImageView
              android:id="@+id/ivMatchUser"
              android:layout_width="120sp"
              android:layout_height="120sp"
              android:layout_below="@+id/tvCardMatchTitle"
              android:layout_toStartOf="@+id/ivMatchArrow" />
          <ImageView
              android:id="@+id/ivMatchArrow"
              android:layout_marginTop="20dp"
              android:layout_centerHorizontal="true"
              android:layout_width="120sp"
              android:src="@drawable/ic_compare_arrows_black_24dp"
              android:layout_height="80sp"
              android:layout_below="@+id/tvCardMatchTitle" />

          <ImageView
              android:id="@+id/ivMatchArtist"
              android:layout_width="120sp"
              android:layout_height="120sp"
              android:layout_below="@+id/tvCardMatchTitle"
              android:layout_toEndOf="@+id/ivMatchArrow" />

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_vertical|right"

              android:layout_alignParentStart="true"
              android:layout_below="@+id/ivMatchUser"
              android:orientation="horizontal">

              <TextView
                  android:id="@+id/tvMatchResult"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textStyle="bold"
                  android:textSize="22sp"
                  android:layout_marginEnd="10sp"
                  android:text="@string/str_tvmatchresult" />
              <TextView
                  android:id="@+id/tvMatchVotes"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"

                  android:text="@string/str_tvmatchvotes" />

              <ImageButton
                  android:id="@+id/ivMatchVote"
                  android:layout_width="50sp"

                  android:background="@drawable/ic_exposure_plus_1_enabled"
                  android:layout_height="50sp"
                   />
          </LinearLayout>
      </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>